<resources>
    <string name="app_name">SIDILAN</string>
    <string name="app_name_abbr">Sistem Informasi Persediaan dan Penjualan</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="book_cover">Book Cover</string>
    <string name="cancel">Batal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="message_log_out">Anda akan keluar dari Akun ini. Lanjutkan?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="search">Search</string>
    <string name="search_bar_books">Cari Buku</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_action">Action</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_add_book">Tambah Buku</string>
    <string name="title_update_book">Ubah Detail Buku</string>
    <string name="title_update_stock">Ubah Stok</string>
    <string name="title_books">Books</string>
    <string name="title_book_in">Buku Masuk</string>
    <string name="title_book_in_printing">Buku Masuk (Cetak)</string>
    <string name="title_book_in_other">Buku Masuk (Lainnya)</string>
    <string name="title_book_in_print">Cetak Buku</string>
    <string name="title_book_in_trx">Riwayat Transaksi Buku</string>
    <string name="title_book_trx_history">Riwayat Transaksi Buku</string>
    <string name="title_stock_opname_history">Riwayat Stock Opname</string>
    <string name="title_book_out">Buku Keluar</string>
    <string name="title_book_out_selling">Penjualan Buku via %1$s</string>
    <string name="title_book_out_other">Buku Keluar (Lainnya)</string>
    <string name="title_book_out_trx">Riwayat Transaksi Buku Keluar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_director">Direktur</string>
    <string name="title_executive_charts">Grafik Eksekutif</string>
    <string name="title_home">Home</string>
    <string name="title_log_out">Keluar</string>
    <string name="title_manager">Manajer</string>
    <string name="title_other">Lainnya</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="appropriate">Sesuai</string>
    <string name="adjust">Sesuaikan</string>
    <string name="inappropriate">Tidak Sesuai</string>
    <string name="title_profile">Profile</string>
    <string name="title_scan_isbn">Scan Barcode ISBN</string>
    <string name="title_staff">Staf</string>
    <string name="title_stock_opname">Stok Opname</string>
    <string name="title_stock_opname_trx">Stock Opname</string>
    <string name="title_user_management">Manajemen Pengguna</string>
    <string name="title_delete_book">Hapus Buku?</string>
    <string name="welcome">"Selamat Datang !"</string>
    <string name="record_book_in">Catat Buku Masuk</string>
    <string name="record_book_out">Catat Buku Keluar</string>
    <string name="title_book_out_sell">Jual Buku</string>
    <string name="contract_date_placeholder">%1$s - %2$s</string>
    <string name="rp_price">Rp. %1$s</string>
    <string name="rp_price_plus">+ Rp. %1$s</string>
    <string name="rp_price_minus">- Rp. %1$s</string>
    <string name="published_at">Terbit pada %1$s</string>
    <string name="current_stock_is">Stok: %1$s buku</string>
    <string name="by_at">%1$s (%2$s) \nPada %3$s</string>
    <string name="two_lines">%1$s \n%2$s</string>
    <string name="two_lines_variant">%1$s \n%2$s (Tidak Memiliki Akses)</string>
    <string name="book_count">%1$s judul</string>
    <string name="checked_count">%1$s/%2$s judul</string>
    <string name="self_name">%1$s\n(Anda)</string>
    <string name="total_stock_qty">%1$s buku</string>
    <string name="transaction">%1$s transaksi</string>
    <string name="total_book_sold_qty">Terjual %1$s buku</string>
    <string name="total_sold_qty">Total Terjual:\n%1$s buku</string>
    <string name="plus_qty">+ %1$s buku</string>
    <string name="minus_qty">- %1$s buku</string>
    <string name="discount_percent_view">Diskon (%1$s%%)</string>
    <string name="created_by">Ditambahkan oleh</string>
    <string name="will_be_deleted">Buku \"%1$s\" akan dihapus. Apakah anda yakin ingin menghapusnya? Ketik \"%1$s\" untuk menghapus buku.</string>
    <string name="forever_contract">Perjanjian Berlaku Selamanya</string>
    <string name="default_web_client_id" />
    <string name="add_whitelist_action">Masukkan informasi pengguna yang akan ditambahkan.</string>
    <string name="update_whitelist_action">Ubah informasi pengguna yang akan diperbarui.</string>
    <string name="add_whitelist">Tambah Whitelist</string>
    <string name="update_whitelist">Ubah Whitelist</string>
    <string name="rupiah">Terbilang %1$s rupiah</string>
    <string name="discrepancy">%1$s ⮕ %2$s</string>
    <string name="about_description">Penerbit Peneleh adalah usaha berbasis donasi/wakaf produktif yang mana modal kerja berasal dari para dermawan yang peduli akan arah pendidikan untuk mencapai Indonesia yang mandiri (zelfbestuur). Hasil penjualan buku-buku terbitan Penerbit Peneleh akan digunakan untuk kegiatan kepenelehan yang dilaksanakan oleh Yayasan Peneleh Jang Oetama. Selain itu, digunakan untuk pembangunan dan operasionalisasi Masjid Kampus dan Pusat Pembelajaran Gratis URuP sebuah organisasi yang bergerak pada bidang pendidikan pemuda secara cuma-cuma untuk mencetak para penggerak hijrah.</string>
    <string name="about_vision_description">Menjadi Penerbit terkemuka dalam menerbitkan karya-karya yang memicu generasi bangsa berwawasan global untuk menjunjung tinggi  kebangsaan dan religiositas.</string>
    <string name="about_mision_description">1. Menyelenggarakan penerbitan buku dan aktivitas lain yang bernilai kebangsaan dan religiositas\n2. Memacu tumbuhnya semangat generasi muda dalam literasi\n3. Menyelenggarakan sustainability penerbitan</string>
    <string name="printing_shop_name">Nama Percetakan<font color='#FF0000'>*</font></string>
    <string name="date_print_book">Tanggal Cetak Buku<font color='#FF0000'>*</font></string>
    <string name="isbn">ISBN<font color='#FF0000'>*</font></string>
    <string name="book_title">Judul Buku<font color='#FF0000'>*</font></string>
    <string name="author">Penulis<font color='#FF0000'>*</font></string>
    <string name="genre">Genre<font color='#FF0000'>*</font></string>
    <string name="published_date">Tanggal Terbit Buku<font color='#FF0000'>*</font></string>
    <string name="print_price">Harga Cetak<font color='#FF0000'>*</font></string>
    <string name="sell_price">Harga Jual<font color='#FF0000'>*</font></string>
    <string name="buyer_name">Nama Pembeli<font color='#FF0000'>*</font></string>
    <string name="selling_platform">Platform Penjualan<font color='#FF0000'>*</font></string>
    <string name="sell_date">Tanggal Penjualan Buku<font color='#FF0000'>*</font></string>
    <string name="donee_name">Nama Pemohon<font color='#FF0000'>*</font></string>
    <string name="book_out_date">Tanggal Buku Keluar<font color='#FF0000'>*</font></string>
    <string name="donor_name">Nama Pemasok<font color='#FF0000'>*</font></string>
    <string name="book_in_date">Tanggal Buku Masuk<font color='#FF0000'>*</font></string>
    <string name="filter_period">Periode %1$s</string>

</resources>