<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:checkable="true"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/trx_items"
        android:title="Transaksi Buku">
        <menu>
            <item
                android:id="@+id/book_in_item"
                android:icon="@drawable/ic_book_plus"
                android:title="@string/title_book_in" />
            <item
                android:id="@+id/book_out_item"
                android:icon="@drawable/ic_book_minus"
                android:title="@string/title_book_out" />
            <item
                android:id="@+id/book_trx_history_item"
                android:icon="@drawable/ic_book_trx_history"
                android:title="@string/title_book_in_trx" />
            <item
                android:id="@+id/executive_charts"
                android:icon="@drawable/ic_chart"
                android:title="Statistik Penjualan" />
        </menu>
    </item>
    <item
        android:id="@+id/stock_opname_items"
        android:title="Stock Opname">
        <menu>
            <item
                android:id="@+id/stock_opname_item"
                android:icon="@drawable/ic_stock_opname"
                android:title="Mulai Stock Opname" />
            <item
                android:id="@+id/stock_opname_history_item"
                android:icon="@drawable/ic_stock_opname_trx"
                android:title="@string/title_stock_opname_history" />
        </menu>
    </item>
    <item
        android:id="@+id/access_items"
        android:title="Akses">
        <menu>
            <item
                android:id="@+id/user_management"
                android:icon="@drawable/ic_user_management"
                android:title="@string/title_user_management" />
        </menu>
    </item>
    <item
        android:id="@+id/about_item"
        android:title="Penerbit Peneleh">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_logo"
                android:title="Tentang Penerbit Peneleh" />
        </menu>
    </item>

</menu>